--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.6.0",
@@ -22,7 +21,6 @@
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-typescript": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "bootstrap": "^4.3.1",
@@ -32,10 +30,9 @@
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "portal-vue": "^2.1.4",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
-    "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
