--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
+    "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
