--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "~3.5.3",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-cli-plugin-pug": "^1.0.7",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
