--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "solazdev.github.io",
-  "version": "0.1.0",
+  "name": "solazdev",
+  "version": "2.0.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -38,6 +38,7 @@
     "typescript": "~3.5.3",
     "vue-cli-plugin-bootstrap-vue": "^0.5.0",
     "vue-cli-plugin-fontawesome": "^0.2.0",
+    "vue-cli-plugin-meta": "^0.1.1",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-template-compiler": "^2.6.11"
   },
