--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "solazdev",
-  "version": "2.0.2",
+  "name": "solazdev.github.io",
+  "version": "3.0.0alpha",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "vite": "node ./bin/vite"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-brands-svg-icons": "^5.12.1",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/vue-fontawesome": "^0.1.5",
-    "bootstrap-vue": "^2.4.0",
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.2",
-    "vue-meta": "^2.3.2",
-    "vue-property-decorator": "^8.4.0",
-    "vue-router": "^3.1.5"
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "core-js": "^3.6.5",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.3.5",
+    "vite": "^2.3.7",
+    "vue": "^3.0.0",
+    "vue-class-component": "^8.0.0-0",
+    "vue-meta": "^3.0.0-alpha.9",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.8.3",
-    "@vue/cli-plugin-babel": "^4.2.2",
-    "@vue/cli-plugin-eslint": "^4.2.2",
-    "@vue/cli-plugin-router": "^4.2.2",
-    "@vue/cli-plugin-typescript": "^4.2.2",
-    "@vue/cli-service": "^4.2.2",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "bootstrap": "^4.3.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "mutationobserver-shim": "^0.3.3",
-    "node-sass": "^4.13.1",
+    "@babel/polyfill": "^7.11.5",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0",
+    "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "sass-loader": "^8.0.2",
-    "typescript": "~3.5.3",
-    "vue-cli-plugin-bootstrap-vue": "^0.5.0",
-    "vue-cli-plugin-fontawesome": "^0.2.0",
-    "vue-cli-plugin-meta": "^0.1.1",
-    "vue-cli-plugin-pug": "^1.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-fontawesome": "^0.3.1",
+    "vue-cli-plugin-pug": "~2.0.0",
+    "vue-cli-plugin-vite": "~1.1.5"
   },
   "eslintConfig": {
     "root": true,
@@ -57,9 +61,5 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  }
 }
