We're kinda moving over to Quasar

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
-    "@vitejs/plugin-vue": "^1.2.3",
+    "@popperjs/core": "^2.9.2",
+    "@vitejs/plugin-vue": "^1.2.2",
+    "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
