--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "gh-pages": "^3.2.3",
+    "push-dir": "^0.4.1",
     "quasar": "^2.0.0",
     "vue-class-component": "^8.0.0-rc.1"
   },
   "devDependencies": {
-    "@quasar/cli": "1.2.1",
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
+    "@quasar/cli": "1.2.1",
     "@types/node": "^10.17.15",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
