--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
-    "push-dir": "^0.4.1",
+    "push-dir": "^0.4.1"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
