--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@volar/vue-language-server": "^1.2.0",
     "@volar/vue-typescript": "^1.2.0",
     "pug": "^3.0.2",
+    "push-dir": "^0.4.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0",
-    "push-dir": "^0.4.1"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
